pract/setup_script/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dummy
  name: ingress-reseller
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: infimobile-admin-dash
              port:
                number: 8080
        - path: /reseller
          pathType: Prefix
          backend:
            service:
              name: infimobile-reseller-dash
              port:
                number: 8080
